<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (c) 2019 Hai Zhang <dreaming.in.code.zh@gmail.com>
  ~ All Rights Reserved.
  -->

<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/action_save"
        android:icon="@drawable/save_icon_control_normal_24dp"
        android:orderInCategory="100"
        android:title="@string/save"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/action_undo"
        android:icon="@drawable/text_undo_24dp"
        android:orderInCategory="110"
        android:title="@string/undo"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_redo"
        android:icon="@drawable/text_redo_24dp"
        android:orderInCategory="120"
        android:title="@string/redo"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_preview"
        android:icon="@drawable/text_preview_24dp"
        android:orderInCategory="130"
        android:title="@string/markdown_preview"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/text_edit_24dp"
        android:orderInCategory="140"
        android:title="@string/edit"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/search_icon_control_normal_24dp"
        android:orderInCategory="150"
        android:title="@string/search"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_editor_settings"
        android:icon="@drawable/settings_icon_white_24dp"
        android:title="@string/text_editor_file_settings"
        app:showAsAction="never">
        <menu>
            <item android:id="@+id/action_wrap_words" android:icon="@drawable/text_file_icon_white_24dp" android:checkable="true" android:title="@string/text_editor_wrap_words" />
            <item android:id="@+id/action_line_numbers" android:icon="@drawable/text_ordered_list_24dp" android:checkable="true" android:title="@string/text_editor_line_numbers" />
            <item android:id="@+id/action_syntax_highlighting" android:icon="@drawable/text_code_24dp" android:checkable="true" android:title="@string/text_editor_syntax_highlighting" />
            <item android:id="@+id/action_auto_format" android:icon="@drawable/text_task_24dp" android:checkable="true" android:title="@string/text_editor_auto_format" />
            <item android:id="@+id/action_font_size" android:icon="@drawable/text_heading_24dp" android:title="@string/text_editor_font_size" />
        </menu>
    </item>

    <item
        android:id="@+id/action_editor_share"
        android:icon="@drawable/dual_share_24dp"
        android:title="@string/share"
        app:showAsAction="never">
        <menu>
            <item android:id="@+id/action_share_path" android:icon="@drawable/link_icon_control_normal_24dp" android:title="@string/text_editor_share_path" />
            <item android:id="@+id/action_share_text" android:icon="@drawable/text_file_icon_white_24dp" android:title="@string/text_editor_share_text" />
            <item android:id="@+id/action_share_file" android:icon="@drawable/file_icon_white_24dp" android:title="@string/text_editor_share_file" />
            <item android:id="@+id/action_share_html" android:icon="@drawable/text_code_24dp" android:title="@string/text_editor_share_html" />
            <item android:id="@+id/action_share_html_source" android:icon="@drawable/text_code_24dp" android:title="@string/text_editor_share_html_source" />
            <item android:id="@+id/action_share_pdf" android:icon="@drawable/file_pdf_icon" android:title="@string/text_editor_share_pdf" />
            <item android:id="@+id/action_share_image" android:icon="@drawable/image_icon_white_24dp" android:title="@string/text_editor_share_image" />
            <item android:id="@+id/action_share_screenshot" android:icon="@drawable/camera_icon_white_24dp" android:title="@string/text_editor_share_screenshot" />
            <item android:id="@+id/action_share_calendar" android:icon="@drawable/file_calendar_icon" android:title="@string/text_editor_share_calendar" />
        </menu>
    </item>

    <item android:id="@+id/action_editor_info" android:icon="@drawable/information_icon_white_24dp" android:title="@string/text_editor_info" app:showAsAction="never" />

    <item
        android:id="@+id/action_reload"
        android:icon="@drawable/reset_icon_control_normal_24dp"
        android:orderInCategory="100"
        android:title="@string/reload"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_encoding"
        android:icon="@drawable/text_file_icon_white_24dp"
        android:orderInCategory="100"
        android:title="@string/text_editor_encoding"
        app:showAsAction="never">
        <menu />
    </item>
</menu>
