<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (c) 2018 Hai Zhang <dreaming.in.code.zh@gmail.com>
  ~ All Rights Reserved.
  -->

<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="AlwaysShowAction">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/search_icon_control_normal_24dp"
        android:orderInCategory="100"
        android:title="@string/search"
        app:actionViewClass="me.zhanghai.android.files.ui.FixQueryChangeSearchView"
        app:showAsAction="always|collapseActionView" />

    <item
        android:id="@+id/action_view_sort"
        android:icon="@drawable/sort_icon_control_normal_24dp"
        android:orderInCategory="100"
        android:title="@string/file_list_action_view_sort"
        app:showAsAction="always">
        <menu>
            <group
                android:id="@+id/group_view"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/action_view_list"
                    android:icon="@drawable/text_list_24dp"
                    android:title="@string/file_list_action_view_list" />
                <item
                    android:id="@+id/action_view_grid"
                    android:icon="@drawable/image_icon_white_24dp"
                    android:title="@string/file_list_action_view_grid" />
            </group>
            <group
                android:id="@+id/group_sort"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/action_sort_by_name"
                    android:icon="@drawable/sort_icon_control_normal_24dp"
                    android:title="@string/file_list_action_sort_by_name" />
                <item
                    android:id="@+id/action_sort_by_type"
                    android:icon="@drawable/file_generic_icon"
                    android:title="@string/file_list_action_sort_by_type" />
                <item
                    android:id="@+id/action_sort_by_size"
                    android:icon="@drawable/filter_icon_control_normal_24dp"
                    android:title="@string/file_list_action_sort_by_size" />
                <item
                    android:id="@+id/action_sort_by_last_modified"
                    android:icon="@drawable/alarm_icon_white_24dp"
                    android:title="@string/file_list_action_sort_by_last_modified" />
                <item
                    android:id="@+id/action_sort_order_ascending"
                    android:icon="@drawable/dual_arrow_up_24dp"
                    android:checkable="true"
                    android:title="@string/file_list_action_sort_order_ascending" />
                <item
                    android:id="@+id/action_sort_directories_first"
                    android:icon="@drawable/directory_icon_white_24dp"
                    android:checkable="true"
                    android:title="@string/file_list_action_sort_directories_first" />
            </group>
            <item
                android:id="@+id/action_view_sort_path_specific"
                android:icon="@drawable/link_icon_control_normal_24dp"
                android:checkable="true"
                android:title="@string/file_list_action_view_sort_path_specific" />
        </menu>
    </item>

    <item
        android:id="@+id/action_new_task"
        android:icon="@drawable/add_icon_control_normal_24dp"
        android:orderInCategory="100"
        android:title="@string/file_list_action_new_task"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_navigate_up"
        android:icon="@drawable/dual_arrow_up_24dp"
        android:orderInCategory="100"
        android:title="@string/file_list_action_navigate_up"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_layout_mode"
        android:icon="@drawable/dual_pane_badge"
        android:orderInCategory="100"
        android:title="@string/file_list_action_layout_mode"
        app:showAsAction="never">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/action_layout_auto"
                    android:icon="@drawable/menu_icon_control_normal_24dp"
                    android:title="@string/file_list_action_layout_auto" />
                <item
                    android:id="@+id/action_layout_single"
                    android:icon="@drawable/text_list_24dp"
                    android:title="@string/file_list_action_layout_single" />
                <item
                    android:id="@+id/action_layout_dual"
                    android:icon="@drawable/dual_pane_badge"
                    android:title="@string/file_list_action_layout_dual" />
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/action_set_secondary_start"
        android:icon="@drawable/dual_bookmark_24dp"
        android:orderInCategory="100"
        android:title="@string/file_list_action_set_secondary_start"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_selection_more"
        android:icon="@drawable/menu_icon_control_normal_24dp"
        android:orderInCategory="100"
        android:title="@string/file_list_action_selection_more"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_navigate_to"
        android:icon="@drawable/link_icon_control_normal_24dp"
        android:alphabeticShortcut="l"
        android:orderInCategory="100"
        android:title="@string/file_list_action_navigate_to"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/reset_icon_control_normal_24dp"
        android:alphabeticShortcut="r"
        android:orderInCategory="100"
        android:title="@string/refresh"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_select_all"
        android:icon="@drawable/check_icon_control_normal_24dp"
        android:alphabeticShortcut="a"
        android:orderInCategory="100"
        android:title="@string/select_all"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_show_hidden_files"
        android:icon="@drawable/filter_icon_control_normal_24dp"
        android:alphabeticShortcut="h"
        android:orderInCategory="100"
        android:title="@string/file_list_action_show_hidden_files"
        android:checkable="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_share"
        android:icon="@drawable/dual_share_24dp"
        android:orderInCategory="100"
        android:title="@string/share"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_copy_path"
        android:icon="@drawable/link_icon_control_normal_24dp"
        android:orderInCategory="100"
        android:title="@string/file_list_action_copy_path"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_open_in_terminal"
        android:icon="@drawable/computer_icon_control_normal_24dp"
        android:orderInCategory="100"
        android:title="@string/file_list_action_open_in_terminal"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_add_bookmark"
        android:icon="@drawable/dual_bookmark_24dp"
        android:orderInCategory="100"
        android:title="@string/file_list_action_add_bookmark"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_create_shortcut"
        android:icon="@drawable/link_icon_control_normal_24dp"
        android:orderInCategory="100"
        android:title="@string/file_list_action_create_shortcut"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_archive_add"
        android:icon="@drawable/add_icon_control_normal_24dp"
        android:orderInCategory="100"
        android:title="@string/file_list_action_archive_add"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_archive_add_folder"
        android:icon="@drawable/directory_icon_white_24dp"
        android:orderInCategory="100"
        android:title="@string/file_list_action_archive_add_folder"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_exit_file_manager"
        android:icon="@drawable/close_icon_control_normal_24dp"
        android:orderInCategory="1000"
        android:title="@string/file_list_action_exit_file_manager"
        app:showAsAction="never" />
</menu>
